--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
+    "test": "jest",
     "lint": "vue-cli-service lint --format table",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -16,12 +17,14 @@
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.19.4",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.12",
